# othello

./: Action.h  ActionInfo.h  AlphaBeta.h  BitSet.h  CMakeLists.txt  Debug.h  Piece.h  State.h  Tests.h  ThreadPool.h  TimerWidget.h  Util.h  main.cpp
